init FormatText and CheckOrigText

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,6 @@ if(UNIX OR MINGW)
   set(CMAKE_INSTALL_RPATH .)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 endif()
+add_subdirectory(src/CheckOrigText)
+add_subdirectory(src/FormatText)
 add_subdirectory(src/Text1To6)
