--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,4 +68,5 @@ if(UNIX OR MINGW)
 endif()
 add_subdirectory(src/CheckOrigText)
 add_subdirectory(src/FormatText)
+add_subdirectory(src/RevertText)
 add_subdirectory(src/Text1To6)
