--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,4 +69,5 @@ endif()
 add_subdirectory(src/CheckOrigText)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RevertText)
+add_subdirectory(src/RevertTextWithoutDot)
 add_subdirectory(src/Text1To6)
