--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ if(UNIX OR MINGW)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 endif()
 add_subdirectory(src/CheckOrigText)
+add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RevertText)
 add_subdirectory(src/RevertTextWithoutDot)
