--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ if(UNIX OR MINGW)
   set(CMAKE_INSTALL_RPATH .)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 endif()
+add_subdirectory(src/CheckJaText2)
 add_subdirectory(src/CheckOrigText)
 add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/FormatText)
