--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,4 +74,5 @@ add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RevertText)
 add_subdirectory(src/RevertTextWithoutDot)
+add_subdirectory(src/SortText)
 add_subdirectory(src/Text1To6)
