--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ add_subdirectory(src/CheckJaText)
 add_subdirectory(src/CheckJaText2)
 add_subdirectory(src/CheckOrigText)
 add_subdirectory(src/CheckOrigText2)
+add_subdirectory(src/CRLFText)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RemapPicture)
 add_subdirectory(src/RevertText)
