--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ if(UNIX OR MINGW)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 endif()
 add_subdirectory(src/CheckControlText)
+add_subdirectory(src/CheckControlTextResult)
 add_subdirectory(src/CheckJaText)
 add_subdirectory(src/CheckJaText2)
 add_subdirectory(src/CheckOrigText)
