--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/CRLFText)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RemapPicture)
+add_subdirectory(src/RemapText)
 add_subdirectory(src/RevertText)
 add_subdirectory(src/RevertTextWithoutDot)
 add_subdirectory(src/SortText)
