--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ if(UNIX OR MINGW)
   set(CMAKE_INSTALL_RPATH .)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 endif()
+add_subdirectory(src/CheckCharsetText)
 add_subdirectory(src/CheckControlText)
 add_subdirectory(src/CheckControlTextResult)
 add_subdirectory(src/CheckJaText)
