--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ if(USE_DEP)
   ADD_DEP_LIBRARY_DIR("${ROOT_SOURCE_DIR}/dep/zlib")
   ADD_DEP_LIBRARY_DIR("${ROOT_SOURCE_DIR}/dep/libpng")
 endif()
+ADD_DEP_INCLUDE_DIR("${ROOT_SOURCE_DIR}/dep/stb")
 if(UNIX OR MINGW)
   if(CYGWIN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
@@ -85,6 +86,7 @@ add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/CRLFText)
 add_subdirectory(src/FormatText)
 add_subdirectory(src/RemapPicture)
+add_subdirectory(src/RemapPicture_stb)
 add_subdirectory(src/RemapText)
 add_subdirectory(src/RevertText)
 add_subdirectory(src/RevertTextWithoutDot)
