--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_subdirectory(src/CheckControlText)
 add_subdirectory(src/CheckControlTextResult)
 add_subdirectory(src/CheckJaText)
 add_subdirectory(src/CheckJaText2)
+add_subdirectory(src/CheckLineCountText)
 add_subdirectory(src/CheckOrigText)
 add_subdirectory(src/CheckOrigText2)
 add_subdirectory(src/CRLFText)
